# mcp-server-analyzer

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  biome.json  package-lock.json  package.json  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml
.mcp-ai-agent-guidelines/memory/: system-bootstrap-onboarding.toon
.mcp-ai-agent-guidelines/snapshots/: fingerprint-20260506162148-6526d8c9.json  fingerprint-20260506162148-f12c6f2d.json  fingerprint-history.json  fingerprint-latest.json
.serena/: project.yml
docs/: CICD_SETUP.md  changelog.md  configuration.md  development.md  index.md  security.md  tools.md
examples/: bad_code.py  good_code.py  mixed_code.py  preview-biome.md  preview-ruff.md  sample.js  sample.py  sample.ts  simple_issues.py
scripts/: build_mcpb.py
src/mcp_server_analyzer/: __init__.py  installer.py  models.py  server.py
src/mcp_server_analyzer/analyzers/: __init__.py  biome.py  ruff.py  ty.py  vulture.py
tests/: conftest.py  test_basic.py  test_biome.py  test_biome_analyzer.py  test_biome_integration.py  test_cli_main.py  test_coverage_improvements.py  test_e2e_mcp.py  test_entrypoint.py  test_error_handling.py  test_installer.py  test_integration.py  test_models.py  test_package_structure.py  test_ruff_analyzer.py  test_server.py  test_server_comprehensive.py  test_server_tools.py  test_vulture_analyzer.py  test_working.py
